@@ -2,9 +2,11 @@ package gov.uk.courtdata.assessment.service;
 
 import gov.uk.courtdata.assessment.impl.*;
 import gov.uk.courtdata.assessment.mapper.FinancialAssessmentHistoryMapper;
+import gov.uk.courtdata.assessment.mapper.FinancialAssessmentMapper;
 import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
 import gov.uk.courtdata.dto.ChildWeightHistoryDTO;
+import gov.uk.courtdata.dto.FinancialAssessmentDTO;
 import gov.uk.courtdata.dto.FinancialAssessmentDetailsHistoryDTO;
 import gov.uk.courtdata.dto.FinancialAssessmentsHistoryDTO;
 import gov.uk.courtdata.entity.ChildWeightingsEntity;
@@ -18,6 +20,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -38,40 +41,39 @@ public class FinancialAssessmentHistoryServiceTest {
     @Mock
     private RepOrderImpl repOrderImpl;
     @Mock
-    private FinancialAssessmentHistoryImpl financialAssessmentsHistoryImpl;
-    @Mock
-    private FinancialAssessmentDetailsHistoryImpl financialAssessmentDetailsHistoryImpl;
-    @Mock
-    private ChildWeightHistoryImpl childWeightHistoryImpl;
+    private FinancialAssessmentHistoryImpl financialAssessmentHistoryImpl;
     @Mock
     private FinancialAssessmentHistoryMapper assessmentHistoryMapper;
+    @Mock
+    private FinancialAssessmentMapper assessmentMapper;
 
     private FinancialAssessmentEntity assessmentEntity;
-    private FinancialAssessmentsHistoryEntity financialAssessmentsHistoryEntity;
     private List<FinancialAssessmentDetailEntity> assessmentDetailsEntities;
-    private ChildWeightingsEntity childWeightingsEntity;
+    private List<ChildWeightingsEntity> childWeightingsEntities;
 
     private FinancialAssessmentsHistoryDTO financialAssessmentsHistoryDTO;
     private FinancialAssessmentDetailsHistoryDTO financialAssessmentDetailsHistoryDTO;
     private ChildWeightHistoryDTO childWeightHistoryDTO;
+    private FinancialAssessmentDTO financialAssessmentDTO;
 
     private static final int MOCK_FINANCIAL_ASSESSMENT_ID = 1000;
 
     @Before
     public void setup() {
         assessmentEntity = TestEntityDataBuilder.getFinancialAssessmentEntity();
-        financialAssessmentsHistoryEntity = TestEntityDataBuilder.getFinancialAssessmentsHistoryEntity();
-        assessmentDetailsEntities = Arrays.asList(TestEntityDataBuilder.getFinancialAssessmentDetailsEntity());
-        childWeightingsEntity = TestEntityDataBuilder.getChildWeightingsEntity();
+        FinancialAssessmentsHistoryEntity financialAssessmentsHistoryEntity = TestEntityDataBuilder.getFinancialAssessmentsHistoryEntity();
+        assessmentDetailsEntities = List.of(TestEntityDataBuilder.getFinancialAssessmentDetailsEntity());
+        childWeightingsEntities = List.of(TestEntityDataBuilder.getChildWeightingsEntity());
 
         financialAssessmentsHistoryDTO = TestModelDataBuilder.getFinancialAssessmentsHistoryDTO();
         financialAssessmentDetailsHistoryDTO = TestModelDataBuilder.getFinancialAssessmentDetailsHistoryDTO();
         childWeightHistoryDTO = TestModelDataBuilder.getChildWeightHistoryDTO();
+        financialAssessmentDTO = TestModelDataBuilder.getFinancialAssessmentDTO();
 
+        when(financialAssessmentHistoryImpl.buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(financialAssessmentsHistoryEntity);
         when(financialAssessmentImpl.find(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(assessmentEntity);
         when(assessmentHistoryMapper.FinancialAssessmentEntityToFinancialAssessmentsHistoryDTO(assessmentEntity)).thenReturn(financialAssessmentsHistoryDTO);
-        when(financialAssessmentsHistoryImpl.buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID))
-                .thenReturn(financialAssessmentsHistoryEntity);
+        when(repOrderImpl.findRepOrder(assessmentEntity.getRepId())).thenReturn(TestEntityDataBuilder.getRepOrder());
     }
 
     @Test
@@ -79,35 +81,37 @@ public class FinancialAssessmentHistoryServiceTest {
         when(financialAssessmentDetailsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(assessmentDetailsEntities);
         when(assessmentHistoryMapper.FinancialAssessmentDetailEntityToFinancialAssessmentDetailsHistoryDTO(any(FinancialAssessmentDetailEntity.class)))
                 .thenReturn(financialAssessmentDetailsHistoryDTO);
-        when(childWeightingsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(Arrays.asList(childWeightingsEntity));
+        when(childWeightingsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(childWeightingsEntities);
         when(assessmentHistoryMapper.ChildWeightingsEntityToChildWeightHistoryDTO(any(ChildWeightingsEntity.class))).thenReturn(childWeightHistoryDTO);
 
         financialAssessmentHistoryService.createAssessmentHistory(MOCK_FINANCIAL_ASSESSMENT_ID, true);
 
         verify(financialAssessmentImpl).find(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).FinancialAssessmentEntityToFinancialAssessmentsHistoryDTO(assessmentEntity);
-        verify(financialAssessmentsHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(financialAssessmentDetailsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).FinancialAssessmentDetailEntityToFinancialAssessmentDetailsHistoryDTO(any(FinancialAssessmentDetailEntity.class));
         verify(childWeightingsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).ChildWeightingsEntityToChildWeightHistoryDTO(any(ChildWeightingsEntity.class));
+        verify(financialAssessmentHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
     }
 
     @Test
     public void givenCorrectFinancialAssessmentId_whenCreateAssessmentHistoryIsInvoked_thenAssessmentsHistoryWithoutFinAssessmentDetailsIsCreated() {
         when(financialAssessmentDetailsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(null);
-        when(childWeightingsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(Arrays.asList(childWeightingsEntity));
+        when(childWeightingsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(childWeightingsEntities);
         when(assessmentHistoryMapper.ChildWeightingsEntityToChildWeightHistoryDTO(any(ChildWeightingsEntity.class))).thenReturn(childWeightHistoryDTO);
 
         financialAssessmentHistoryService.createAssessmentHistory(MOCK_FINANCIAL_ASSESSMENT_ID, true);
 
         verify(financialAssessmentImpl).find(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).FinancialAssessmentEntityToFinancialAssessmentsHistoryDTO(assessmentEntity);
-        verify(financialAssessmentsHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(financialAssessmentDetailsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper, times(0)).FinancialAssessmentDetailEntityToFinancialAssessmentDetailsHistoryDTO(any(FinancialAssessmentDetailEntity.class));
         verify(childWeightingsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).ChildWeightingsEntityToChildWeightHistoryDTO(any(ChildWeightingsEntity.class));
+
+        financialAssessmentsHistoryDTO.setAssessmentDetailsList(new ArrayList<>());
+        verify(financialAssessmentHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
     }
 
     @Test
@@ -115,16 +119,21 @@ public class FinancialAssessmentHistoryServiceTest {
         when(financialAssessmentDetailsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(assessmentDetailsEntities);
         when(assessmentHistoryMapper.FinancialAssessmentDetailEntityToFinancialAssessmentDetailsHistoryDTO(any(FinancialAssessmentDetailEntity.class)))
                 .thenReturn(financialAssessmentDetailsHistoryDTO);
+        when(assessmentMapper.FinancialAssessmentEntityToFinancialAssessmentDTO(any(FinancialAssessmentEntity.class)))
+                .thenReturn(financialAssessmentDTO);
         when(childWeightingsImpl.findAll(MOCK_FINANCIAL_ASSESSMENT_ID)).thenReturn(null);
 
         financialAssessmentHistoryService.createAssessmentHistory(MOCK_FINANCIAL_ASSESSMENT_ID, true);
 
         verify(financialAssessmentImpl).find(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).FinancialAssessmentEntityToFinancialAssessmentsHistoryDTO(assessmentEntity);
-        verify(financialAssessmentsHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
+        verify(assessmentMapper).FinancialAssessmentEntityToFinancialAssessmentDTO(assessmentEntity);
         verify(financialAssessmentDetailsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper).FinancialAssessmentDetailEntityToFinancialAssessmentDetailsHistoryDTO(any(FinancialAssessmentDetailEntity.class));
         verify(childWeightingsImpl).findAll(MOCK_FINANCIAL_ASSESSMENT_ID);
         verify(assessmentHistoryMapper, times(0)).ChildWeightingsEntityToChildWeightHistoryDTO(any(ChildWeightingsEntity.class));
+
+        financialAssessmentsHistoryDTO.setChildWeightingsList(new ArrayList<>());
+        verify(financialAssessmentHistoryImpl).buildAndSave(financialAssessmentsHistoryDTO, MOCK_FINANCIAL_ASSESSMENT_ID);
     }
 }
